# DFGviz

./: .gitignore  CMAKE_EXCLUSION_TEST.md  CMAKE_INTEGRATION_GUIDE.md  CONTRIBUTING.md  LICENSE  LOGO_GENERATION_PROMPT.md  PUBLISHING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  SCALPEL_COVERAGE_REPORT.md  cmake_parser.py  create_release.py  git_history_dataflow_analyzer.py  prepare_release.ps1  prepare_release.sh  pyinstaller.spec  pytest.ini  requirements.txt  test_cmake_summary.md
.github/workflows/: release.yml  tests.yml
doc/: BRANCH_C++_README.md  CMake_ANALYSIS_README.md  CPP_ANALYSIS_README.md  DIFF_HIGHLIGHTING_README.md  QUICK_START.md  RELEASE_INSTRUCTIONS.md  RELEASE_SUMMARY.md  SCALPEL_ANALYSIS_README.md  TEST_README.md  TEST_SUMMARY.md  WINDOWS_CLANG_INSTALL.md  WORKFLOW.md  scalpel_complete_dataflow_README.md  test_cmake_summary.md
test_cpp_files/: CMakeLists.txt
test_cpp_files/include/: calculator.h  processor.h  utils.h
test_cpp_files/src/: calculator.cpp  main.cpp  processor.cpp  utils.cpp
